# pucminas-paralelismo

./: .env.exemple  .gitignore  README.md  pyproject.toml
src/: main.py
src/apis/: weather_api.py
src/level_01/: exercice_01.py  exercice_02.py  exercice_03.py  exercice_04.py  exercice_05.py
src/level_02/: exercice_06.py  exercice_07.py  exercice_08.py  exercice_09.py  exercice_10.py
src/level_03/: exercice_11.py  exercice_12.py  exercice_13.py  exercice_14.py  exercice_15.py
src/utils/: compare_times.py  faker_create_datasets.py  log_decorator.py  simulated_api.py
